catkin_ws/logs/iq_gnc/build.make.039.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:65:5: warning: init-statement in selection statements only available with ‘-std=c++17’ or ‘-std=gnu++17’
   65 |  if(!check_waypoint_reached(.3) {
      |     ^
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:65:32: error: expected ‘;’ before ‘{’ token
   65 |  if(!check_waypoint_reached(.3) {
      |                                ^~
      |                                ;
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:72:2: error: expected primary-expression before ‘else’
   72 |  else {
      |  ^~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:71:3: error: expected ‘)’ before ‘else’
   71 |  }
      |   ^
      |   )
   72 |  else {
      |  ~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:65:4: note: to match this ‘(’
   65 |  if(!check_waypoint_reached(.3) {
      |    ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1949: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
